# timetoc

./: .README.md.swp  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENCE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  pr_lint.yml  release.yml  security.yml  test.yml
search/: search_index.json
src/timetoc/: cli.py  login.py  main.py  timeparser.py  timetracking.py
