[tool.poetry]
name = "timetoc"
version = "0.2.0"
description = "helper to automatic timetac tasks"
authors = ["Guilherme Prokisch <guilherme.prokisch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.4"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
termynal = "^0.2.1"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.4"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
black = { cmd = "black .", help = "Run black" }
isort = { cmd = "isort .", help = "Run isort" }
lint = { cmd="task black && task isort", help="Run all lint tasks"}
docs = { cmd="mkdocs build", help = "Build docs"}
ghpages = { cmd='mkdocs gh-deploy -m "docs: update documentation" -v --force', help = "Publish docs to Github Pages"}
clean-docs = { cmd = "rm -rf site", help = "Remove /site folder (mkdocs build)" }
clean = {cmd="task clean-docs", help = "Run all clean tasks"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
