[tool.poetry]
name = "timetoc"
version = "0.4.0"
description = "helper to automatic timetac tasks"
authors = ["Guilherme Prokisch <guilherme.prokisch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keyring = "^23.13.1"
typer = "^0.7.0"
rich = "^13.3.4"
holidays = "^0.22"
requests = "^2.28.2"
selenium-wire = "^5.1.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.4"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
termynal = "^0.2.1"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.4"
pre-commit = "^3.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"
pytest-cov = "^4.0.0"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
black = { cmd = "black .", help = "Run black" }
isort = { cmd = "isort .", help = "Run isort" }
pre-commit = { cmd = "pre-commit install && pre-commit install --hook-type commit-msg", help = "Install pre-commits" }
lint = { cmd="task black && task isort", help="Run all lint tasks"}
docs = { cmd="mkdocs build", help = "Build docs"}
ghpages = { cmd='mkdocs gh-deploy -m "docs: update documentation" -v --force', help = "Publish docs to Github Pages" }
clean-docs = { cmd = "rm -rf site", help = "Remove /site folder (mkdocs build)" }
unit-test = { cmd="pytest --doctest-modules", help = "Run all unit tests" }
unit-test-cov = { cmd="pytest --doctest-modules --cov=src --cov-report term-missing --cov-report=html", help = "Run all unit tests with cover report" }
unit-tests-cov-fail= { cmd="pytest --doctest-modules --cov=src --cov-report term-missing --cov-report=html --cov-fail-under=80 --junitxml=pytest.xml | tee pytest-coverage.txt", help = "Run all unit tests with cover report and " }
test = { cmd="task unit-test", help="Run all tests"}
test-cov = { cmd="task unit-test-cov", help="Run all tests w/ cover"}
clean-cov = { cmd="rm -rf .coverage htmlcov pytest.xml pytest-coverage.txt dist", help="Run cover reports"}
clean = { cmd="task clean-docs && task clean-cov ", help = "Run all clean tasks" }


[tool.poetry.scripts]
timetoc='timetoc.cli:app'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
